--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-load-plugins": "1.5.0",
     "gulp-replace": "0.6.1",
     "gulp-shell": "0.6.5",
+    "iview": "^2.14.0-rc.1",
     "lodash": "4.17.5",
     "node-sass": "4.9.0",
     "sass-loader": "6.0.6",
@@ -48,7 +49,7 @@
     "chromedriver": "2.27.2",
     "copy-webpack-plugin": "4.0.1",
     "cross-spawn": "5.0.1",
-    "css-loader": "0.28.0",
+    "css-loader": "^0.28.11",
     "eslint": "3.19.0",
     "eslint-config-standard": "10.2.1",
     "eslint-friendly-formatter": "3.0.0",
@@ -65,6 +66,8 @@
     "html-webpack-plugin": "2.30.1",
     "jest": "21.2.0",
     "jest-serializer-vue": "0.3.0",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
     "nightwatch": "0.9.12",
     "node-notifier": "5.1.2",
     "optimize-css-assets-webpack-plugin": "3.2.0",
@@ -76,11 +79,14 @@
     "selenium-server": "3.0.1",
     "semver": "5.3.0",
     "shelljs": "0.7.6",
+    "style-loader": "^0.21.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "1.1.1",
     "url-loader": "0.5.8",
     "vue-jest": "1.0.2",
     "vue-loader": "13.3.0",
-    "vue-style-loader": "3.0.1",
+    "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "2.5.2",
     "webpack": "3.6.0",
     "webpack-bundle-analyzer": "2.9.0",
