--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "gulp-load-plugins": "1.5.0",
     "gulp-replace": "0.6.1",
     "gulp-shell": "0.6.5",
-    "iview": "^2.14.0-rc.1",
+    "iview": "^2.14.3",
     "lodash": "4.17.5",
     "node-sass": "4.9.0",
     "sass-loader": "6.0.6",
