--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-sass": "4.9.0",
     "sass-loader": "6.0.6",
     "svg-sprite-loader": "3.7.3",
+    "v-charts": "^1.17.10",
     "vue": "2.5.2",
     "vue-cookie": "1.1.4",
     "vue-count-to": "^1.0.13",
