--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue-cookie": "1.1.4",
     "vue-count-to": "^1.0.13",
     "vue-router": "3.0.1",
+    "vue2vis": "0.0.16",
     "vuex": "3.0.1"
   },
   "devDependencies": {
