--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "0.17.1",
     "babel-plugin-component": "0.10.1",
     "babel-polyfill": "6.26.0",
+    "crypto-js": "^3.1.9-1",
     "echarts": "^4.1.0",
     "element-ui": "^2.3.9",
     "gulp": "3.9.1",
@@ -25,6 +26,7 @@
     "gulp-replace": "0.6.1",
     "gulp-shell": "0.6.5",
     "iview": "^2.14.3",
+    "js-base64": "^2.5.1",
     "lodash": "4.17.5",
     "sass-loader": "6.0.6",
     "svg-sprite-loader": "3.7.3",
